# ModernML

./: README.md
src/: CMakeLists.txt  main.cpp
src/LinearModels/: CMakeLists.txt  LinearModel.hpp  LinearRegression.hpp  Ridge.hpp  RidgeRegression.hpp
src/LinearRegression/: CMakeLists.txt  LinearRegression.cpp  LinearRegression.hpp  Ridge.hpp  main.cpp
src/LinearRegression/utils/: Concepts.hpp  Outputs.hpp  PrettyPrinter.hpp
src/LinearRegression_PythonPrototype/: LinearRegression.py
src/metrics/: CMakeLists.txt  R2Score.hpp
src/preprocessing/: CMakeLists.txt  MinMaxScaler.hpp  Scaler.hpp
src/utils/: CMakeLists.txt  Concepts.hpp  MatrixMathOperations.hpp  Outputs.hpp  PrettyPrinter.hpp  RandomGenerator.hpp
